--- a/content/blog/part-2-compare-data-warehouse-features.mdx
+++ b/content/blog/part-2-compare-data-warehouse-features.mdx
@@ -244,10 +244,9 @@ It can create tables but it's not feature-rich as its competitors. That makes it
 
 ### TLDR
 
-* If you're on AWS, using Glue will give you the option to use both Athena, Redshift Serverless, Snowflake, and BigQuery. 
-Athena is the easiest to start with on AWS and you can switch over Redshift Serverless over time.
+* If you're on AWS, using Glue will give you the option to use both Athena, Redshift Serverless, Snowflake, and BigQuery. Athena is the easiest to start with on AWS and you can switch over Redshift Serverless over time.
 * If you're on GCP, BigQuery is probably the best option for you.
 * If you're cross cloud:
-	* Snowflake is the best option for you if you have SQL-familiar people like analysts and analytics engineers.
-	* Databricks is the best option for you if you have data engineers and data scientists, focusing on ML. 
-	* If you're expanding to AWS from GCP, BigQuery is still worth investing in.
+	1. Snowflake is the best option for you if you have SQL-familiar people like analysts and analytics engineers.
+	2. Databricks is the best option for you if you have data engineers and data scientists, focusing on ML. 
+	3. If you're expanding to AWS from GCP, BigQuery is still worth investing in.
