--- a/content/blog/part-2-compare-data-warehouse-features.mdx
+++ b/content/blog/part-2-compare-data-warehouse-features.mdx
@@ -20,11 +20,11 @@ In this post, we will compare the features of the data warehouses. Based on my p
   <thead class="bg-slate-50 dark:bg-slate-700">
     <tr>
       <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left"></th>
-      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">Snowflake</th>
-      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">AWS Redshift Serverless</th>
-      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">Google BigQuery</th>
-      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">Databricks</th>
-      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">[AWS Athena](./#fsdf)</th>
+      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">[Snowflake](/blog/part-2-compare-data-warehouse-features#best-overall-snowflake-%EF%B8%8F)</th>
+      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">[AWS Redshift Serverless](/blog/part-2-compare-data-warehouse-features#cool-again-redshift-serverless)</th>
+      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">[Google BigQuery](/blog/part-2-compare-data-warehouse-features#hidden-gem-bigquery)</th>
+      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">[Databricks](/blog/part-2-compare-data-warehouse-features#most-flexible-databricks)</th>
+      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">[AWS Athena](/blog/part-2-compare-data-warehouse-features#easiest-to-start-with-aws-athena)</th>
     </tr>
   </thead>
   <tbody>
@@ -42,7 +42,7 @@ In this post, we will compare the features of the data warehouses. Based on my p
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Glue to Aurora], [Zero-ETL](https://docs.aws.amazon.com/AmazonRDS/latest/AuroraUserGuide/zero-etl.creating.html#zero-etl.create) </td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">BI Engine, BigTable Integrations</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">-</td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">RDS Integration</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">-</td>
     </tr>
     <tr>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">**Scheduling**</td>
@@ -53,7 +53,7 @@ In this post, we will compare the features of the data warehouses. Based on my p
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400"></td>
     </tr>
     <tr>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">** Sharing Capabilities**</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">**Sharing Capabilities**</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">Data (Secure share), Code () 5️⃣</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">AWS Clean Rooms, VMs 4️⃣</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Data Sharing](), VMs 4️⃣</td>
@@ -119,11 +119,11 @@ In this post, we will compare the features of the data warehouses. Based on my p
   <thead class="bg-slate-50 dark:bg-slate-700">
     <tr>
       <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left"></th>
-      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">Snowflake</th>
-      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">AWS Redshift (S)</th>
-      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">Google BigQuery</th>
-      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">Databricks</th>
-      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">[AWS Athena](./#fsdf)</th>
+      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">[Snowflake](/blog/part-2-compare-data-warehouse-features#best-overall-snowflake-%EF%B8%8F)</th>
+      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">[AWS Redshift (S)](/blog/part-2-compare-data-warehouse-features#cool-again-redshift-serverless)</th>
+      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">[Google BigQuery](/blog/part-2-compare-data-warehouse-features#hidden-gem-bigquery)</th>
+      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">[Databricks](/blog/part-2-compare-data-warehouse-features#most-flexible-databricks)</th>
+      <th class="border border-slate-300 dark:border-slate-600 font-semibold p-4 text-slate-900 dark:text-slate-200 text-left">[AWS Athena](/blog/part-2-compare-data-warehouse-features#easiest-to-start-with-aws-athena)</th>
     </tr>
   </thead>
   <tbody>
