--- a/content/blog/part-2-compare-data-warehouse-features.mdx
+++ b/content/blog/part-2-compare-data-warehouse-features.mdx
@@ -54,9 +54,9 @@ In this post, we will compare the features of the data warehouses. Based on my p
     </tr>
     <tr>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">**Sharing Capabilities**</td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">Data (Secure share), Code () 5️⃣</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">Data ([Secure share](https://docs.snowflake.com/en/user-guide/data-sharing-intro)), Code ([Framework](https://docs.snowflake.com/en/developer-guide/native-apps/native-apps-about)) 5️⃣</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">AWS Clean Rooms, VMs 4️⃣</td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Data Sharing](), VMs 4️⃣</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Analytics Hub](https://cloud.google.com/analytics-hub?hl=en), VMs 4️⃣</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Delta Sharing](https://www.databricks.com/product/delta-sharing), Compute 5️⃣</td>
             <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400"></td>
 
@@ -65,7 +65,7 @@ In this post, we will compare the features of the data warehouses. Based on my p
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">**Marketplace**</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[3K listing](https://app.snowflake.com/marketplace), most advanced 5️⃣</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[5K listing](https://aws.amazon.com/marketplace) 4️⃣</td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[3.5K listing](https://console.cloud.google.com/marketplace?hl=en) 3️⃣</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[1.5K listing](https://console.cloud.google.com/marketplace?hl=en) 3️⃣</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[2.5K listing](https://marketplace.databricks.com/?sortBy=date), most advanced 5️⃣</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[5K listing](https://aws.amazon.com/marketplace)4️⃣</td>
     </tr>
