--- a/content/blog/part-2-compare-data-warehouse-features.mdx
+++ b/content/blog/part-2-compare-data-warehouse-features.mdx
@@ -38,24 +38,24 @@ In this post, we will compare the features of the data warehouses. Based on my p
     </tr>
     <tr>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">**HTAP**</td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400"> [Hybrid Tables](https://quickstarts.snowflake.com/guide/getting_started_with_hybrid_tables/#8) ❔</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Hybrid Tables](https://quickstarts.snowflake.com/guide/getting_started_with_hybrid_tables/#8) ❔</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Glue to Aurora], [Zero-ETL](https://docs.aws.amazon.com/AmazonRDS/latest/AuroraUserGuide/zero-etl.creating.html#zero-etl.create) </td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">BI Engine, BigTable Integrations</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[BI Engine](https://cloud.google.com/bigquery/docs/bi-engine-intro), [BigTable](https://cloud.google.com/bigquery/docs/export-to-bigtable), [Spanner](https://cloud.google.com/bigquery/docs/export-to-spanner), [Pub/Sub](https://cloud.google.com/bigquery/docs/export-to-pubsub)</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">-</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">-</td>
     </tr>
     <tr>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">**Scheduling**</td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Tasks]() 5️⃣</td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400"></td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Scheduled queries](https://cloud.google.com/bigquery/docs/scheduling-queries)</td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400"></td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400"></td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Tasks](https://docs.snowflake.com/en/user-guide/tasks-intro) 5️⃣</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">-</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Scheduled queries](https://cloud.google.com/bigquery/docs/scheduling-queries), Workflows 4️⃣</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Workflows](https://www.databricks.com/product/workflows) 5️⃣</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">-</td>
     </tr>
     <tr>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">**Sharing Capabilities**</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">Data ([Secure share](https://docs.snowflake.com/en/user-guide/data-sharing-intro)), Code ([Framework](https://docs.snowflake.com/en/developer-guide/native-apps/native-apps-about)) 5️⃣</td>
-      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">AWS Clean Rooms, VMs 4️⃣</td>
+      <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[AWS Clean Rooms](https://eu-west-2.console.aws.amazon.com/cleanrooms/home?region=eu-west-2#/)  4️⃣</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Analytics Hub](https://cloud.google.com/analytics-hub?hl=en), VMs 4️⃣</td>
       <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400">[Delta Sharing](https://www.databricks.com/product/delta-sharing), Compute 5️⃣</td>
             <td class="border border-slate-300 dark:border-slate-700 p-4 text-slate-500 dark:text-slate-400"></td>
