--- a/content/blog/part-1-compare-data-warehouse-pricing-model.mdx
+++ b/content/blog/part-1-compare-data-warehouse-pricing-model.mdx
@@ -1,11 +1,12 @@
 ---
 title: "Part 1: Comparing the pricing models of modern data warehouses"
 publishedAt: '2024-09-10'
+author: "Universql"
 isPublished: true
 tags:
   - data-warehouse
   - universql
-description: Comparing pricing models in Snowflake, BigQuery, Redshift Serverless and Databricks
+description: Comparing pricing models in Snowflake, BigQuery, Redshift Serverless and Databricks, AWS Athena
 toc: false
 ---
 
