--- a/content/blog/part-1-compare-data-warehouse-pricing-model.mdx
+++ b/content/blog/part-1-compare-data-warehouse-pricing-model.mdx
@@ -8,7 +8,7 @@ tags:
   - universql
 description: Comparing pricing models in Snowflake, BigQuery, Redshift Serverless and Databricks, AWS Athena
 toc: false
-seoImage: /images/blog/dwh/cover.png
+seoImage: /images/blog/dwh/cover2.png
 ---
 
 While I'm developing [Universql](https://github.com/buremba/universql), I had a chance to learn more about the up-to-date comparison of data warehouses. It's hard to do benchmarks for databases, but it's harder to do comparisons on their pricing. There are 3 major things you need to consider:
